Need refactor one test for YesNoPlugin. YesNoPlugin not work, need refactor InputFile from response.